# rustnix

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  image.sh
.cargo/: config.toml
.github/workflows/: test.yml
disk/: README
disk/etc/: users
disk/src/: alloc_free.S  hello.S  myinfo.S
disk/src/c/: hello.c
fs-loader/: Cargo.toml  README.md
fs-loader/src/: fs.rs  img.rs  main.rs
kernel/: Cargo.toml  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/src/: lib.rs  main.rs
kernel/src/internal/: allocator.rs  console.rs  file.rs  fs.rs  gdt.rs  interrupts.rs  io.rs  keyboard.rs  memory.rs  mod.rs  process.rs  user.rs  vga.rs
kernel/src/internal/clk/: mod.rs  rtc.rs
kernel/src/internal/devices/: mod.rs  null.rs  proc.rs  rand.rs  zero.rs
kernel/src/internal/syscall/: mod.rs  service.rs
kernel/src/internal/task/: executor.rs  mod.rs
kernel/tests/: boot.rs  overflow.rs
src/: allocator.rs  ata.rs  file.rs  fs.rs  interrupts.rs  language_features.rs  lib.rs  main.rs  memory.rs  serial.rs  vga.rs
src/clk/: mod.rs  pit.rs  rtc.rs
src/internal/: acpi.rs  allocator.rs  ata.rs  console.rs  file.rs  fs.rs  gdt.rs  interrupts.rs  io.rs  keyboard.rs  memory.rs  mod.rs  process.rs  serial.rs  syscall.rs  vga.rs
src/internal/clk/: mod.rs  pit.rs  rtc.rs
src/internal/devices/: mod.rs  null.rs  rand.rs  zero.rs
src/internal/syscall/: mod.rs  service.rs
src/internal/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: alloc.rs  boot.rs  overflow.rs
usr/: Cargo.toml  README.md
usr/src/: lib.rs  process.rs  syscall.h  syscall.rs
