[package]
name = "rustnix"
version = "0.1.0"
edition = "2024"

[dependencies]
bit_field = "0.10.2"
bootloader = { version = "0.9.0", features = ["map_physical_memory"] }
embedded-sdmmc = "0.8.1"

lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.9.8"
uart_16550 = "0.3.2"
volatile = "0.2.6"
x86_64 = "0.15.2"
bitflags = { version = "2", default-features = false }
log = { version = "0.4", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
typenum = "1.18.0"
[dependencies.crossbeam-queue]
version = "0.3.12"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 
test-timeout = 300 

[[test]]
name = "overflow"
harness = false
