[package]
name = "rustnix"
version = "0.1.0"
edition = "2024"


[dependencies]
acpi = "5.2.0"
aml = "0.16.4"
bit_field = "0.10.2"
bitflags = { version = "2", default-features = false }
bootloader = { version = "0.9.29", features = ["map_physical_memory"] }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
hashbrown = "0.15.2"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
log = { version = "0.4", default-features = false }
object = { version = "0.36.7", default-features = false, features = ["read"] }
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
rand = { version = "0.9.0", default-features = false, features = ["alloc", "small_rng"] }
spin = "0.9.8"
typenum = "1.18.0"
uart_16550 = "0.3.2"
volatile = "0.2.6"
x86_64 = "0.15.2"
[dependencies.crossbeam-queue]
version = "0.3.12"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "overflow"
harness = false

[workspace.lints.rust]
missing_docs = "warn"

[features]
# info logging is the default
default = ["info_log", "ascii-art"]
trace_log = [] # Enable trace logging
debug_log = [] # Enable debug logging
info_log = [] # Enable info logging
warn_log = [] # Enable warn logging (don't show info logs)
error_log = [] # Enable error logging (don't show info or warn logs)
ascii-art = [] # print ASCII art on boot
